--- a/index.html
+++ b/index.html
@@ -1,40 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Principal</title>
+    <link rel="stylesheet" href="Principal.css">
 </head>
 <body>
 
-       <div class="titulo">
-        <p>
-         <h1>Onda Solidária</h1> 
-         
-         <br>
+<header>
+    <div id="HeaderText">
+        <div class="titulo">Onda Solidária</div>
+        <nav>
+                <a href="Login.html">Login</a>
+                <a href="Cadastro.html">Cadastro</a>
+        </nav>
+    </div>
+    <hr style="width: 98%;">
+</header>
 
-        <h1>
-            Venha surfar na onda de ajudar a vida marinha!
-        </h1>
-        </p>
-       </div>
+<main>
+    <div class="caixa-texto2">
+        <h2>Quem Somos?</h2>
+        <h3>Um serviço que busca auxiliar na preservação da vida na água por meio de conscientização 
+            e principalmente da divulgação de projetos que atuam em função de defender e conservar esse 
+            recurso tão valioso para a vida.
+            Acreditamos que a colaboração geral traz resultados surpreendentes!
+        </h3>
+    </div>
+
+    <div>
+        <img src="imgs/aguaviva.jpg" alt="Água Viva">
+        <img src="imgs/pacu.jpg" alt="Pacu">
+        <img src="imgs/tartaruga.jpg" alt="Tartaruga">
+    </div>
+
+    <div class="caixa-texto1">
+        <h2>Como apoiar essa ideia?</h2>
+        <h3>Você pode realizar seu cadastro e criar uma conta em nosso site, tendo acesso às informações 
+            atualizadas sobre projetos ambientais de preservação aquática. Além disso, se encontrar um 
+            projeto que chame sua atenção, não hesite em ajudar como possível! 
+            Juntos fazemos do mundo um lugar melhor!
+        </h3>
+    </div>
+
+    <div>
+        <img src="imgs/peixe1.png" alt="Peixe">
+        <img src="imgs/polvo.jpg" alt="Polvo">
+        <img src="imgs/jacaré.jpg" alt="Jacaré">
+    </div>
+
+    <div class="caixa-texto2">
+        <h2>Alguns projetos que merecem seu apoio:</h2>
+            <a href="http://www.projetoagua.org.br/o-projeto">Projeto Água</a> <br>
+            <a href="https://fundacionecomar.org/pt/">Fundación Ecomar</a> <br>
+            <a href="https://www.aguasustentavel.org.br">Instituto Água Sustentavel</a>
+    </div>
     
-       <div class="login-container">    
-        <h2>Já possui uma conta? ENTRE!</h2>
-        <form action="#">
-            <div class="input-group">
-                <label for="username">Usuário:</label> <br>
+</main>
 
-                <input type="text" id="username" name="username" placeholder="Enter your username" required>
-            </div>
-            <div class="input-group">
-                <label for="password">Senha:</label> <br>
-                <input type="password" id="password" name="password" placeholder="Enter your password" required>
-            </div>
-            <button type="submit">ENTRAR</button>
-        </form>
-        <button type="submit">CRIAR UMA CONTA</button>
-        </div>
+<footer>
+    <hr style="width: 98%">
+        <br>
+        <h3>2024 | Onda Solidária | Todos os direitos reservados.</h3>
+</footer>
+
 </body>
 </html>
